# quality-filtering

./: README.md
filtering-different-sources/: statistics_Iris.py  statistics_face.py  statistics_fingerDP.py
filtering-different-sources/enrolment/: FingerprintQualitySystem.py  IrisQualitySystem.py  QualitySystemStatisticalFace.py
filtering-different-sources/quality_info/: area_percent_iris_completed.csv
filtering-single-source/: CMakeLists.txt  requirements.txt
filtering-single-source/python_scripts/: benchmark_delaunay_index.py  convert_fingerprint_files.py  json_utils.py  plot_penetration_rate.py  plot_penetration_rate_modfied.py  quality_score_calculation.py
filtering-single-source/src/: Application.cpp  Application.h  DebugDrawing.cpp  DebugDrawing.h  DelaunayIndex.hpp  Fingerprint.cpp  Fingerprint.h  HashtableVariants.hpp  JsonUtils.cpp  JsonUtils.h  MinutiaSelectionVariants.hpp  Module_DelaunayIndex.cpp  MultidimHashtable.hpp  Triangulation.cpp  Triangulation.h
filtering-single-source/src/Delaunator/: Delaunator.hpp
